Fix: responsiveness on small heights

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: #faf8f6;
     font-family: "Mali", cursive;
     font-weight: 400;
